Campo minato fixed

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <div class="container">
           
         </div>
+        <h2 id="counter_point"></h2>
     </main>
             <!-- /JS-INJECTION -->
             <!-- FOOTER -->
@@ -44,10 +45,6 @@
         <div class="foot_container">
             <span>Made with ❤️ by</span>
             <a href="https://boolean.careers/">Boolean</a>
-        </div>
-        <div>
-            <h2>Il tuo punteggio:</span>
-            <span id="counter_point"></span>
         </div>
     </footer>
     <script src="js/functions.js"></script>
